Converted test scripts to TypeScript

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>XUI Framework Test</title>
 
     <link rel="shortcut icon" type="image/png" href="jasmine/jasmine_favicon.png">
     <link rel="stylesheet" href="jasmine/jasmine.css">
@@ -10,12 +10,8 @@
     <script src="jasmine/jasmine-html.js"></script>
     <script src="jasmine/boot.js"></script>
 
-    <!-- JavaScript files to test -->
     <script src="../dist/xui.js"></script>
-
-    <!-- Our test case -->
-    <script src="helpers/test-helper.js"></script>
-    <script src="test-cases/core-app.js"></script>
+    <script src="specs.js"></script>
 </head>
 <body>
 </body>
