Fix system.Window test cases and add core.Presentation test case

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
     <script src="./specs/core/app.js"></script>
     <script src="./specs/core/view.js"></script>
     <script src="./specs/core/item.js"></script>
+    <script src="./specs/core/presentation.js"></script>
     
     <script src="./specs/system/audio.js"></script>
     <script src="./specs/system/window.js"></script>
