Implement static get method for core.Scene class - Add support for fetching local properties using internal.App.get method (added additional param "isLocal") - Add unit test cases - Turn off App's presentation related test cases by default (to prevent clearing of presentation each time we run the test)

--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
     <script src="../dist/xui.js"></script>
     
     <script src="./specs/core/view.js"></script>
+    <script src="./specs/core/scene.js"></script>
     <script src="./specs/core/item.js"></script>
     <script src="./specs/core/presentation.js"></script>
     
