Add system.System test cases

--- a/test/index.html
+++ b/test/index.html
@@ -22,6 +22,7 @@
     <script src="./specs/system/audio.js"></script>
     <script src="./specs/system/window.js"></script>
     <script src="./specs/system/video.js"></script>
+    <script src="./specs/system/system.js"></script>
 
     <!-- Test the app class last since... it would clear the presentation lol -->
     <script src="./specs/core/app.js"></script>
