--- a/test/functional/plg-46/index.html
+++ b/test/functional/plg-46/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>XUI Framework Test</title>
+        <title>XUI Framework Test (Functional)</title>
         <meta name="config-url" content="http://repo.dev/xui/test/functional/plg-46/config.html">
     </head>
     <body>
