Update functional test cases to support xui-ready - Add test script for add item related functionality

--- a/test/functional/plg-49/config.html
+++ b/test/functional/plg-49/config.html
@@ -13,7 +13,7 @@
         'use strict';
 
         // Configure the configuration window
-        try {
+        document.addEventListener('xui-ready', function() {
             var config = xui.config.ConfigWindow.getInstance();
             var item = xui.core.Item.getCurrentSource();
             var iItem = internal.Item;
@@ -33,9 +33,7 @@
             item.applyConfig({
                 color: 'red'
             });
-        } catch (err) {
-            console.trace('ERR :: ', err);
-        }
+        });
         </script>
     </body>
 </html>
