--- a/test/functional/plg-46/config.html
+++ b/test/functional/plg-46/config.html
@@ -15,23 +15,24 @@
         // Configure the configuration window
         document.addEventListener('xui-ready', function() {
             var config = xui.config.ConfigWindow.getInstance();
-            var item = xui.core.Item.getCurrentSource();
-            var iItem = internal.Item;
-
-            console.trace('Internal Item ID :: ', iItem.getBaseID());
-
             config.setRenderMode(xui.config.ConfigWindow.RenderMode.FULLSCREEN);
             
-            item.getID().then(function(id) {
-                console.trace('ItemID :: ', id);
-            });
+            xui.core.Item.getCurrentSource().then(function(item) {
+                var iItem = internal.Item;
 
-            item.loadConfig().then(function(config) {
-                console.trace('loadConfig() :: ', config);
-            });
+                console.trace('Internal Item ID :: ', iItem.getBaseID());
+                
+                item.getID().then(function(id) {
+                    console.trace('ItemID :: ', id);
+                });
 
-            item.applyConfig({
-                color: 'red'
+                item.loadConfig().then(function(config) {
+                    console.trace('loadConfig() :: ', config);
+                });
+
+                item.applyConfig({
+                    color: 'red'
+                });
             });
         });
         </script>
