--- a/test/functional/plg-46/index.html
+++ b/test/functional/plg-46/index.html
@@ -12,18 +12,18 @@
         /* globals xui, console */
         'use strict';
         document.addEventListener('xui-ready', function() {
-            var item = xui.core.Item.getCurrentSource();
-            var emitter = xui.source.SourceWindow.getInstance();
+            xui.core.Item.getCurrentSource().then(function(item) {
+                var emitter = xui.source.SourceWindow.getInstance();
+                item.loadConfig().then(function(config) {
+                    console.trace('loadConfig() :: ', config);
+                });
 
-            item.loadConfig().then(function(config) {
-                console.trace('loadConfig() :: ', config);
-            });
+                emitter.on('apply-config', function(config) {
+                    console.trace('EventEmitter(apply-config) :: ', config);
 
-            emitter.on('apply-config', function(config) {
-                console.trace('EventEmitter(apply-config) :: ', config);
-
-                // Save it to its config
-                item.saveConfig(config);
+                    // Save it to its config
+                    item.saveConfig(config);
+                });
             });
         });
         </script>
