--- a/test/unit/config.html
+++ b/test/unit/config.html
@@ -16,8 +16,16 @@
     
     <script src="./specs/core/view.js"></script>
     <script src="./specs/core/scene.js"></script>
-    <script src="./specs/core/item.js"></script>
     <script src="./specs/core/presentation.js"></script>
+    <script src="./specs/core/item.js"></script>
+
+    <script src="./specs/core/item/audio.js"></script>
+    <script src="./specs/core/item/chroma.js"></script>
+    <script src="./specs/core/item/color.js"></script>
+    <script src="./specs/core/item/layout.js"></script>
+    <script src="./specs/core/item/playback.js"></script>
+    <script src="./specs/core/item/video.js"></script>
+    <script src="./specs/core/item/window.js"></script>
     
     <script src="./specs/system/audio.js"></script>
     <script src="./specs/system/window.js"></script>
