Update test files, use relative path instead of exact URL

--- a/test/functional/plg-46/index.html
+++ b/test/functional/plg-46/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>XUI Framework Test (Functional PLG-46)</title>
-        <meta name="config-url" content="http://repo.dev/xui/test/functional/plg-46/config.html">
+        <meta name="config-url" content="config.html">
     </head>
     <body>
         <script src="../../../dist/xui.js"></script>
