--- a/test/functional/plg-49/index.html
+++ b/test/functional/plg-49/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>XUI Framework Test (Functional PLG-49)</title>
-        <meta name="config-url" content="http://repo.dev/xui/test/functional/plg-49/config.html">
+        <meta name="config-url" content="config.html">
     </head>
     <body>
         <p style="color:#FFF">
