--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>XUI Framework Test</title>
 
-    <meta name="config-url" content="http://repo.dev/xui/test/unit/config.html">
+    <meta name="config-url" content="config.html">
 
     <link rel="shortcut icon" type="image/png" href="jasmine/jasmine_favicon.png">
     <link rel="stylesheet" href="jasmine/jasmine.css">
