Update test cases' configuration window render mode

--- a/test/functional/plg-43/config.html
+++ b/test/functional/plg-43/config.html
@@ -16,7 +16,7 @@
         document.addEventListener('xui-ready', function() {
             var config = xui.config.ConfigWindow.getInstance();
 
-            config.setRenderMode(xui.config.ConfigWindow.RenderMode.FULLSCREEN);
+            config.setRenderMode(xui.config.ConfigWindow.RenderMode.FULLWINDOW);
         });
         </script>
     </body>
