--- a/test/unit/config.html
+++ b/test/unit/config.html
@@ -42,7 +42,7 @@
 
     var config = xui.config.ConfigWindow.getInstance();
 
-    config.setRenderMode(xui.config.ConfigWindow.RenderMode.FULLSCREEN);
+    config.setRenderMode(xui.config.ConfigWindow.RenderMode.FULLWINDOW);
     </script>
 </body>
 </html>
